# goose-kafka

./: .bumpversion.cfg  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/user_service/: users.py
examples/user_service/tests/: conftest.py  test_users.py
goose_kafka/: abstractions.py  consumer.py  testing_fixtures.py
tests/: conftest.py  test_consumer.py
